--- a/index.html
+++ b/index.html
@@ -1606,7 +1606,7 @@
     });
 </script>
 
-<!-- הוספת Font Awesome לאייקונים -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<!-- הוספת Font Awesome לאייקונים - קישור מעודכן ויציב יותר -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" integrity="sha512-1ycn6IcaQQ40/MKBW2W4Rhis/DbILU74C1vSrLJxCq57o941Ym01SwNsOMqvEBFlcgUa6xLiPY/NS5R+E6ztJQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </body>
 </html>
